--- a/config/_default/config.yaml
+++ b/config/_default/config.yaml
@@ -5,7 +5,7 @@
 
 title: Luwen Wan # Website name
 baseurl: 'https://example.com/' # Website URL
-copyright: '© {2022} Yingjie Li' # Footer text, e.g. '© {year} Me'
+copyright: '© {2022} Luwen Wan' # Footer text, e.g. '© {year} Me'
 
 ############################
 ## LANGUAGE
