--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -28,9 +28,9 @@ main:
     url: '#teaching'
     weight: 60
 
-  - name: Contact
-    url: '#contact'
-    weight: 70
+   # - name: Contact
+   #    url: '#contact'
+   #    weight: 70
 
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/uploads/resume.pdf` and uncomment the lines below.
