--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -16,17 +16,17 @@ main:
     url: '#projects'
     weight: 30
 
-  - name: Talks
-    url: '#talks'
-    weight: 40
+  # - name: Talks
+    # url: '#talks'
+    # weight: 40
 
   # - name: Posts
   #   url: '#posts'
   #   weight: 50
 
-  - name: Teaching
-    url: '#teaching'
-    weight: 60
+  # - name: Teaching
+    # url: '#teaching'
+    # weight: 60
 
    # - name: Contact
    #    url: '#contact'
